Adding daily forecast

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
     <h1 class="app-title"> Ely Weather </h1>
     <main>
         <div id="whole-app">
+
+            <div id="forecast">
+
+            </div>
             <div id="city-weather">
                 <h1 id="current-city">London </h1>
                 <p class="current-city-details">
