--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
         <p>
             This project was coded by
             <a href="https://github.com/lyshcyr" target="_blank">Elysha Quebral </a> and is <a href="#" target="_blank">
-                on GitHub </a> and <a href="https://weather-ely-week7.netlify.app/" target="_blank"> hosted on Netlify
+                on GitHub </a> and <a href="https://week8-weatherforecas-ely.netlify.app/" target="_blank"> hosted on
+                Netlify
             </a>
         </p>
     </footer>
